Created SendService interface, unit tests, refactored existing code and tests added README.md, JavaDocs