@@ -1,30 +1,27 @@
 package org.scormican.sendemailservice.controller;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
-import jakarta.validation.ConstraintViolation;
-import java.util.Arrays;
+import com.sendgrid.Response;
 import java.util.List;
-import java.util.Set;
 import java.util.UUID;
-import org.hibernate.validator.internal.engine.ConstraintViolationImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.scormican.sendemailservice.entities.Email;
 import org.scormican.sendemailservice.mappers.EmailMapper;
 import org.scormican.sendemailservice.model.EmailDTO;
 import org.scormican.sendemailservice.repositories.EmailRepository;
+import org.scormican.sendemailservice.services.SendService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
 import org.springframework.web.context.WebApplicationContext;
 
 @SpringBootTest
@@ -40,13 +37,15 @@ class EmailControllerIT {
     @Autowired
     EmailMapper emailMapper;
 
+    @MockBean
+    SendService sendService;
+
     @Autowired
     WebApplicationContext wac;
 
     MockMvc mockMvc;
 
     public final String VALID_EMAIL = "test@mail.com";
-    public final String INVALID_EMAIL = "test";
 
     @BeforeEach
     void setUp() {
@@ -56,6 +55,8 @@ class EmailControllerIT {
 
     @Test
     void testSaveNewEmail() throws Exception {
+        when(sendService.api(any())).thenReturn(new Response());
+
         List<EmailDTO> testEmails = getTestEmail(VALID_EMAIL);
         ResponseEntity responseEntity = emailController.handlePost(testEmails);
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(201));
@@ -63,7 +64,7 @@ class EmailControllerIT {
 
         String[] locationUUID = responseEntity.getHeaders().getLocation().getPath().split("/");
         UUID savedUUID = UUID.fromString(locationUUID[4]);
-        List<String> emailAddrs = Arrays.asList(VALID_EMAIL);
+        List<String> emailAddrs = List.of(VALID_EMAIL);
         Email email = emailRepository.findAllByEmailAddrIgnoreCaseIn(emailAddrs).get(0);
         assertThat(email.getId()).isEqualTo(savedUUID);
     }
@@ -71,8 +72,8 @@ class EmailControllerIT {
 
     private List<EmailDTO> getTestEmail(String emailAddr) {
         EmailDTO testEmail = EmailDTO.builder()
-                        .emailAddr(emailAddr)
-                        .build();
+            .emailAddr(emailAddr)
+            .build();
 
         return List.of(testEmail);
     }
